CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.21rc2

	- The scheduler did not pass the correct CUPS_ENCRYPTION
	  setting to CGI programs which caused problems on
	  systems which used non-standard encryption settings
	  (STR #773)
	- The lpq command showed 11st, 12nd, and 13rd instead of
	  11th, 12th, and 13th for the rank (STR #769)
	- "make install" didn't work on some platforms due to an
	  error in the man page makefiles (STR #775)
	- Changed some calls to snprintf() in the scheduler to
	  SetStringf() (STR #740)


CHANGES IN CUPS V1.1.21rc1

	- Fixed some "type-punned" warnings produced by GCC when
	  -fstrict-aliasing is specified (STR #679)
	- The PDF filter incorrectly calculated the bounding box
	  of a page (STR #682)
	- The IPP backend did not use SSL when printing over a
	  port other than 443 (STR #730)
	- The scheduler could crash when processing a Limit or
	  LimitExcept directive (STR #728)
	- The lpq, lpr, and lp commands did not differentiate
	  between the server being unresponsive and the lack of
	  a default printer (STR #728)
	- The PAM checks in the configure script did not stop
	  after the first match (STR #728)
	- The cups-config man page was incorrectly placed in
	  section 3 (STR #728)
	- The cupstestppd utility did not show a warning message
	  when a PPD file indicated BCP protocol support with
	  PJL (STR #720)
	- The scheduler did not return the correct exit code
	  when startup failed (STR #718)
	- The cupsRasterReadPixels() function checked for
	  EAGAIN, which caused problems on FreeBSD (STR #723)
	- The cupsGetDests() function did not use the current
	  encryption setting (STR #653)
	- The scheduler did not properly parse name-based
	  BrowseRelay directives in the cupsd.conf file (STR
	  #711)
	- The IPP backend now supports the following options in
	  the device URI: encryption, waitjob, and waitprinter
	  (STR #699)
	- The parallel, serial, socket, and USB backends did not